--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
               GitHub Repository      
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
-            <a href="assets/odf/uduLuEMm7cN8t2cSQ0lfS1193iW0MPtVFjVQonjr.pdf"  class="button button--flex button--small portfolio_button" target="_blank">
+            <a href="assets/pdf/uduLuEMm7cN8t2cSQ0lfS1193iW0MPtVFjVQonjr.pdf"  class="button button--flex button--small portfolio_button" target="_blank">
               Download Published Paper      
               <i class="uil uil-arrow-right button_icon"></i>
             </a>
@@ -907,7 +907,7 @@
                 <i class="uil uil-envelope contact_icon"></i>
                 <div>
                   <h3 class="contact_title">Email</h3>
-                  <span class="contact_subtitle"> adas@binghamton.edu </span>
+                  <span class="contact_subtitle"> adas9@binghamton.edu </span>
                 </div>
                 </div>
 
@@ -920,7 +920,7 @@
                   </div>
             </div>
 
-            <form action="https://formsubmit.co/adas@binghamton.edu" class="contact_form grid" method="POST">
+            <form action="https://formsubmit.co/adas9@binghamton.edu" class="contact_form grid" method="POST">
               <div class="contact_input grid">
 
               <div class="contact_content">
